--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install build essentials tools
-        run: apt-get install -y build-essential
+        run: apt-get update && apt-get install -y build-essential
 
       - name: Build extenstion
         run: make install
