change base image from ubuntu to postgres

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 jobs:
   container-job:
     runs-on: ubuntu-latest
-    container: ubuntu:latest
+    container: postgres:latest
 
     services:
       postgres:
